--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -22,6 +22,7 @@
     "@haldir/core": "workspace:*"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "tsup": "^8.0.0",
     "typescript": "^5.7.0",
     "vitest": "^3.0.0"
