--- a/packages/registry/package.json
+++ b/packages/registry/package.json
@@ -27,6 +27,7 @@
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "publishConfig": { "access": "public" },
   "files": ["dist"],
   "engines": {
     "node": ">=20.0.0"
@@ -39,6 +40,7 @@
   },
   "dependencies": {
     "@haldir/pipeline": "workspace:*",
+    "@haldir/scanner": "workspace:*",
     "@haldir/core": "workspace:*",
     "express": "^5.0.1",
     "zod": "^3.22.0"
